[gd_scene load_steps=6 format=3 uid="uid://ccojf40i0ylql"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_kt2ex"]
[ext_resource type="Texture2D" uid="uid://btb5oijmjdkq2" path="res://assets/img/wild_jam/72-All-Cards.png" id="1_uvb76"]
[ext_resource type="Texture2D" uid="uid://bjflete4kluk4" path="res://assets/img/wild_jam/72-light-n-dark.png" id="2_5v2jo"]
[ext_resource type="PackedScene" uid="uid://cpdiur6rc1avm" path="res://UI/credits.tscn" id="4_8vpkv"]
[ext_resource type="Texture2D" uid="uid://bpif8fwxr136h" path="res://assets/img/logo/WINGED_WORLDS2.png" id="5_wwjlb"]

[node name="main_)menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_kt2ex")

[node name="Container" type="Container" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = -43.0
offset_right = 56.0
offset_bottom = -43.0
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
vertical = true

[node name="Button" type="Button" parent="Container/BoxContainer"]
layout_mode = 2
text = "Play"

[node name="Button4" type="Button" parent="Container/BoxContainer"]
layout_mode = 2
text = "Stage Select"

[node name="Button2" type="Button" parent="Container/BoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Button3" type="Button" parent="Container/BoxContainer"]
layout_mode = 2
text = "Credits"

[node name="color0" type="ColorPickerButton" parent="Container/BoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="color1" type="ColorPickerButton" parent="Container/BoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 595.0
offset_top = 395.0
offset_right = 3295.0
offset_bottom = 1599.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_uvb76")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 593.0
offset_top = 230.0
offset_right = 3293.0
offset_bottom = 1000.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_5v2jo")

[node name="credits" parent="." instance=ExtResource("4_8vpkv")]
visible = false
layout_mode = 1

[node name="Label" type="Label" parent="."]
modulate = Color(0.740473, 0.17164, 0.241554, 1)
layout_mode = 0
offset_left = 789.0
offset_top = 332.0
offset_right = 945.0
offset_bottom = 674.0
theme_override_font_sizes/font_size = 250
text = "X"

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 32.0
offset_right = 1541.0
offset_bottom = 215.0
scale = Vector2(0.720029, 0.720029)
texture = ExtResource("5_wwjlb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="colorBackground" type="ColorRect" parent="HBoxContainer"]
z_index = -50
custom_minimum_size = Vector2(626, 0)
layout_mode = 2

[node name="colorBackground2" type="ColorRect" parent="HBoxContainer"]
z_index = -50
custom_minimum_size = Vector2(626, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="pressed" from="Container/BoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Container/BoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Container/BoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="color_changed" from="Container/BoxContainer/color0" to="." method="_on_color_0_color_changed"]
[connection signal="color_changed" from="Container/BoxContainer/color1" to="." method="_on_color_1_color_changed"]
